feat: Add method for requesting data from web
